--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
 
     <script src="js/directive/ng-file-upload-shim.min.js"></script>
     <script src="js/directive/ng-file-upload.min.js"></script>
@@ -31,6 +32,10 @@
     <script src="js/app.routes.js"></script>
     <script src="controller/app.controller.js"></script>
     <script src="service/app.service.js"></script>
+
+    <script>
+        feather.replace();
+    </script>
 
 </body>
 
